--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          
 
       - name: Instalar dependencias
-        run: npm ci
+        run: npm install
         shell: pwsh
 
       - name: Pruebas unitarias (jest)
