--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "demo-ci",
   "version": "1.0.0",
   "private": true,
-  "scripts": { "test": "jest --ci --coverage" },
+  "scripts": {
+    "test": "jest --ci --coverage",
+    "e2e": "playwright test --reporter=junit,line"
+  },
   "devDependencies": {
     "jest": "^29.7.0",
-    "jest-junit": "^16.0.0"
+    "jest-junit": "^16.0.0",
+    "@playwright/test": "^1.47.0"
   },
   "jest": {
     "testMatch": ["**/*.test.js"],
